--- a/celebration.html
+++ b/celebration.html
@@ -21,9 +21,9 @@
         <a href="index.html" class="logo"><img src="img/logo.png" alt="パティスリーエクラのロゴ"></a>
         <nav id="navi" aria-label="メインナビゲーション">
             <ul class="nav-menu">
-                <li><a href="#menu">Menu</a></li>
-                <li><a href="#news">News</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="index.html#menu">Menu</a></li>
+                <li><a href="index.html#news">News</a></li>
+                <li><a href="index.html#about">About</a></li>
                 <li><a href="access.html">Access</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -39,11 +39,9 @@
 
     <main class="celebration-page">
         <!-- ヒーロー -->
-        <section class="hero">
-            <div class="hero-content tracking-in-expand">
+        <section class="celebration-hero">
                 <h1 class="hero-title">Celebration Cakes</h1>
-                <p class="hero-subtitle">特別な日に華やぎを添えるホールケーキ</p>
-            </div>
+                <p class="hero-subtitle">特別な日に華やぎを添えるケーキ</p>
         </section>
 
         <!-- 商品カード一覧 -->
@@ -52,26 +50,26 @@
                 <span class="badge">NEW</span>
                 <img src="img/celebration-ichigo.jpg" alt="苺デコレーションケーキ">
                 <h2>苺デコレーションケーキ</h2>
-                <p class="desc">定番人気。ふわふわのスポンジに苺をたっぷり。</p>
-                <p class="price">¥3,800〜</p>
-                <p class="size">4号（2〜3人用）〜 6号（6〜8人用）</p>
+                <p class="desc">定番人気。<br>ふわふわのスポンジに苺をたっぷり。</p>
+                <p class="price">¥3,800～</p>
+                <p class="size">4号（2〜3人用）ー 6号（6〜8人用）</p>
             </div>
 
             <div class="product-card popular">
                 <span class="badge">人気</span>
                 <img src="img/celebration-choco.jpg" alt="チョコレートケーキ">
                 <h2>チョコレートケーキ</h2>
-                <p class="desc">濃厚ショコラの贅沢ケーキ。誕生日や記念日に。</p>
-                <p class="price">¥4,200〜</p>
+                <p class="desc">濃厚ショコラの贅沢ケーキ。<br>誕生日や記念日に。</p>
+                <p class="price">¥4,200～</p>
                 <p class="size">5号（4〜6人用）〜 7号（8〜10人用）</p>
             </div>
 
             <div class="product-card">
                 <img src="img/celebration-talt.jpg" alt="フルーツタルト">
                 <h2>フルーツタルト</h2>
-                <p class="desc">旬のフルーツをふんだんにのせた彩り豊かなタルト。</p>
-                <p class="price">¥4,800〜</p>
-                <p class="size">5号（4〜6人用）〜</p>
+                <p class="desc">旬のフルーツをふんだんにのせた<br>彩り豊かなタルト。</p>
+                <p class="price">¥4,800</p>
+                <p class="size">5号（4〜6人用）</p>
             </div>
         </section>
 
@@ -135,7 +133,7 @@
                 <div class="footer-column">
                     <p>Information</p>
                     <div class="footer-links">
-                        <a href="#news">お知らせ</a>
+                        <a href="index.html#news">お知らせ</a>
                         <a href="access.html">アクセス</a>
                         <a href="contact.html">お問い合わせ</a>
                     </div>
