--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <span></span>
             <span></span>
         </div>
-        <div id="mask"></div>
-    </header>
-
+    <div id="mask"></div>
+</header>
+    
     <main>
         <div class="wrapper">
             <!-- Menuセクション -->
@@ -144,13 +144,10 @@
                         <p class="news-text">9月より営業時間を変更いたします。平日10:00-19:00、土日祝9:00-20:00となります。</p>
                     </article>
                 </div>
-                <div class="btn">
-                    <a href="#">もっと見る</a>
-                </div>
             </section>
 
             <!-- Aboutセクション -->
-            <section id="about" class="wrapper">
+            <section id="about">
                 <h2 class="section-title">
                     About<span class="ja">私たちについて</span>
                 </h2>
@@ -205,21 +202,19 @@
 
             <!-- Instagramセクション -->
             <section class="instagram-section">
-                <div class="wrapper">
-                    <h2 class="section-title">
-                        Instagram<span class="ja">インスタグラム</span></h2>
-                    <div class="instagram-grid">
-                        <a href="#" target="_blank"><img src="img/insta-photo1.jpg" alt="instagram photo 1"></a>
-                        <a href="#" target="_blank"><img src="img/insta-photo2.jpg" alt="instagram photo 2"></a>
-                        <a href="#" target="_blank"><img src="img/insta-photo3.jpg" alt="instagram photo 3"></a>
-                        <a href="#" target="_blank"><img src="img/insta-photo4.jpg" alt="instagram photo 4"></a>
-                    </div>
-                    <div class="instagram-follow">
-                        <a href="#" class="follow-button">
-                            <span><i class="fa-brands fa-instagram"></i></span>
-                            <span>Instagramでフォロー</span>
-                        </a>
-                    </div>
+                <h2 class="section-title">
+                    Instagram<span class="ja">インスタグラム</span></h2>
+                <div class="instagram-grid">
+                    <a href="#" target="_blank"><img src="img/insta-photo1.jpg" alt="instagram photo 1"></a>
+                    <a href="#" target="_blank"><img src="img/insta-photo2.jpg" alt="instagram photo 2"></a>
+                    <a href="#" target="_blank"><img src="img/insta-photo3.jpg" alt="instagram photo 3"></a>
+                    <a href="#" target="_blank"><img src="img/insta-photo4.jpg" alt="instagram photo 4"></a>
+                </div>
+                <div class="instagram-follow">
+                    <a href="#" class="follow-button">
+                        <span><i class="fa-brands fa-instagram"></i></span>
+                        <span>Instagramでフォロー</span>
+                    </a>
                 </div>
             </section>
         </div>
@@ -227,83 +222,80 @@
 
     <!-- フッター -->
     <footer>
-        <div class="wrapper">
-            <div class="footer-content">
-                <!-- ショップ情報 -->
-                <div class="footer-shop">
-                    <div class="footer-logo">Pâtisserie ÉCLAT</div>
-                    <div class="catchphrase">
-                        <span class="jp">「今日という日を、少しだけ特別に。」</span><br>
-                        <span class="en">Make today a little more special.</span>
+        <div class="footer-content">
+            <!-- ショップ情報 -->
+            <div class="footer-shop">
+                <div class="footer-logo">Pâtisserie ÉCLAT</div>
+                <div class="catchphrase">
+                    <span class="jp">「今日という日を、少しだけ特別に。」</span><br>
+                    <span class="en">Make today a little more special.</span>
+                </div>
+                <div class="shop-info">
+                    <div class="shop-info-item">
+                        <span><i class="fa-solid fa-location-dot"></i></span>
+                        <span>〒100-0001 東京都千代田区1-1-1</span>
                     </div>
-                    <div class="shop-info">
-                        <div class="shop-info-item">
-                            <span><i class="fa-solid fa-location-dot"></i></span>
-                            <span>〒100-0001 東京都千代田区1-1-1</span>
-                        </div>
-                        <div class="shop-info-item">
-                            <span><i class="fa-solid fa-phone"></i></span>
-                            <span>03-1234-5678</span>
-                        </div>
-                        <div class="shop-info-item">
-                            <span><i class="fa-solid fa-envelope"></i></span>
-                            <span>info@patisserie-example.com</span>
-                        </div>
+                    <div class="shop-info-item">
+                        <span><i class="fa-solid fa-phone"></i></span>
+                        <span>03-1234-5678</span>
                     </div>
-                    <div class="social-links">
-                        <a href="https://facebook.com/" class="social-link"><i
-                                class="fa-brands fa-square-facebook"></i></a>
-                        <a href="https://instagram.com/" class="social-link"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://twitter.com/" class="social-link"><i
-                                class="fa-brands fa-square-x-twitter"></i></a>
+                    <div class="shop-info-item">
+                        <span><i class="fa-solid fa-envelope"></i></span>
+                        <span>info@patisserie-example.com</span>
                     </div>
                 </div>
-
-                <!-- メニュー -->
-                <div class="footer-column">
-                    <p>Menu</p>
-                    <div class="footer-links">
-                        <a href="petitgateau.html">小さなケーキ</a>
-                        <a href="celebration.html">ホールケーキ・お祝いケーキ</a>
-                        <a href="confiserie.html">焼き菓子＆ギフト</a>
-                    </div>
-                </div>
-
-                <!-- インフォメーション -->
-                <div class="footer-column">
-                    <p>Information</p>
-                    <div class="footer-links">
-                        <a href="#news">お知らせ</a>
-                        <a href="access.html">アクセス</a>
-                        <a href="contact.html">お問い合わせ</a>
-                    </div>
-                </div>
-
-                <!-- 営業時間 -->
-                <div class="footer-column">
-                    <p>営業時間</p>
-                    <div class="business-hours">
-                        <div class="hours-item">
-                            <span>平日</span>
-                            <span>10:00 - 20:00</span>
-                        </div>
-                        <div class="hours-item">
-                            <span>土日祝</span>
-                            <span>9:00 - 19:00</span>
-                        </div>
-                        <div class="hours-item">
-                            <span>定休日</span>
-                            <span>火曜日</span>
-                        </div>
-                    </div>
+                <div class="social-links">
+                    <a href="https://facebook.com/" class="social-link"><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href="https://instagram.com/" class="social-link"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://twitter.com/" class="social-link"><i class="fa-brands fa-square-x-twitter"></i></a>
                 </div>
             </div>
 
-            <!-- コピーライト -->
-            <div class="footer-bottom">
-                <p>&copy; 2025 Pâtisserie ÉCLAT. All rights reserved.</p>
+            <!-- メニュー -->
+            <div class="footer-column">
+                <p>Menu</p>
+                <div class="footer-links">
+                    <a href="petitgateau.html">小さなケーキ</a>
+                    <a href="celebration.html">ホールケーキ・お祝いケーキ</a>
+                    <a href="confiserie.html">焼き菓子＆ギフト</a>
+                </div>
+            </div>
+
+            <!-- インフォメーション -->
+            <div class="footer-column">
+                <p>Information</p>
+                <div class="footer-links">
+                    <a href="#news">お知らせ</a>
+                    <a href="access.html">アクセス</a>
+                    <a href="contact.html">お問い合わせ</a>
+                </div>
+            </div>
+
+            <!-- 営業時間 -->
+            <div class="footer-column">
+                <p>営業時間</p>
+                <div class="business-hours">
+                    <div class="hours-item">
+                        <span>平日</span>
+                        <span>10:00 - 20:00</span>
+                    </div>
+                    <div class="hours-item">
+                        <span>土日祝</span>
+                        <span>9:00 - 19:00</span>
+                    </div>
+                    <div class="hours-item">
+                        <span>定休日</span>
+                        <span>火曜日</span>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <!-- コピーライト -->
+        <div class="footer-bottom">
+            <p>&copy; 2025 Pâtisserie ÉCLAT. All rights reserved.</p>
+        </div>
+
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
