--- a/petitgateau.html
+++ b/petitgateau.html
@@ -21,9 +21,9 @@
         <a href="index.html" class="logo"><img src="img/logo.png" alt="パティスリーエクラのロゴ"></a>
         <nav id="navi" aria-label="メインナビゲーション">
             <ul class="nav-menu">
-                <li><a href="#menu">Menu</a></li>
-                <li><a href="#news">News</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="index.html#menu">Menu</a></li>
+                <li><a href="index.html#news">News</a></li>
+                <li><a href="index.html#about">About</a></li>
                 <li><a href="access.html">Access</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -38,11 +38,9 @@
 
     <main class="petitgateau-page">
         <!-- ヒーロー -->
-        <section class="hero">
-            <div class="hero-content">
+        <section class="petitgateau-hero">
                 <h1 class="hero-title">Petits Gâteaux</h1>
                 <p class="hero-subtitle">ひとつぶの幸せを、日常に</p>
-            </div>
         </section>
 
         <!-- 商品カード一覧 -->
@@ -78,7 +76,7 @@
         <!-- 他メニューへのリンク -->
         <section class="other-menus btn">
             <div class="menu-links">
-                <a href="celebration.html">Celebration Cakes</a>
+                <a href="celebration.html">Celebration</a>
                 <a href="confiserie.html">Confiserie</a>
             </div>
             <!-- 戻るボタン -->
@@ -137,7 +135,7 @@
                 <div class="footer-column">
                     <p>Information</p>
                     <div class="footer-links">
-                        <a href="#news">お知らせ</a>
+                        <a href="index.html#news">お知らせ</a>
                         <a href="access.html">アクセス</a>
                         <a href="contact.html">お問い合わせ</a>
                     </div>
